--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -21,7 +21,7 @@
                 <a class="navbar-brand" href="/">SENA</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a href="/task">Tareas </a></li>
+                <li><a href="/trimestre">Trimestres </a></li>
             </ul>
                 <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
