--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -20,9 +20,9 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">SENA</a>
             </div>
-            <ul class="nav navbar-nav">
+            <!-- <ul class="nav navbar-nav">
                 <li><a href="/trimestre">Trimestres </a></li>
-            </ul>
+            </ul> -->
                 <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
                 <li class="nav-item">
@@ -32,7 +32,7 @@
             {% else %}
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Registrarse</a></li>
-                <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Iniciar Sesion</a></li>
+                
             </ul>
             {% endif %}
         </div>
