--- a/home/templates/ingresar.html
+++ b/home/templates/ingresar.html
@@ -1,7 +1,7 @@
 {%  extends 'base.html' %}
 
 {% block content %}
-<h1> Formulario de registro</h1>
+<h1> Iniciar Sesion </h1>
 
 {{error}}
 
@@ -11,7 +11,7 @@
 {{form.as_p}}
 
 <button>
-    Registrarse
+    Ingresar
 </button>
 
 </form>
