--- a/home/templates/signup.html
+++ b/home/templates/signup.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<h1> Signup</h1>
+<h1> Registrarse</h1>
 
 {{error}}
 
@@ -12,7 +12,7 @@
     {{form.as_p}}
 
     <button>
-        Iniciar Sesion
+        Registrar
     </button>
 
 </form>
