--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -22,6 +22,7 @@
             <div class="text-center">
                 {% if user.is_authenticated %}
                 <a class="btn btn-dark" href="/programa/">Ver los programas</a>
+                <a class="btn btn-dark" href="/instructores/">Ver los Instructores</a>
                 {% endif %}
                 
             </div>
