--- a/programa/templates/programa_f.html
+++ b/programa/templates/programa_f.html
@@ -51,6 +51,12 @@ method="POST">
 
     {% endfor %}
 </div>
-
+<br>
+<section>
+  <div>
+    <a href="/programa/create/" class="btn btn-secondary btn-sm"> Crear Programa de Formacion</a>
+  </div>
+  
+  </section>
 
 {%  endblock %}
