--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="/">
-                <img src="{% static 'sena.png' %}" alt="Logo" width="85" height="50" class="d-inline-block align-text-top">
+                <img src="{% static '/images/sena1.png' %}" alt="Logo" width="75" height="55" class="d-inline-block align-text-top">
               </a>
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
