--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -23,6 +23,7 @@
                 {% if user.is_authenticated %}
                 <a class="btn btn-dark" href="/programa/">Ver los programas</a>
                 <a class="btn btn-dark" href="/instructores/">Ver los Instructores</a>
+                <a class="btn btn-dark" href="/agenda/">Ver los Horarios</a>
                 {% endif %}
                 
             </div>
