--- a/agenda/templates/mostrarAgenda.html
+++ b/agenda/templates/mostrarAgenda.html
@@ -1,7 +1,10 @@
 {%  extends 'base.html' %}
+{% load static %}
 
 
-
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'fullcalendar/lib/main.css' %}">
+{% endblock extra_css %}
 
 {% block content %}
 <div class="card">
@@ -13,9 +16,33 @@
     </div>
   </div>
 </div>
-<div class="calendar">
+<div id="calendar"></div>
   
 </div>
 
 
 {%  endblock %}
+{% block extra_js %}
+<script src="{% static 'fullcalendar/lib/main.js' %}"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function(){
+        var calendarUI=document.getElementById('calendar');
+        var calendar =  new FullCalendar.Calendar(calendarUI,{
+          events:[
+            {% for agenda in agendas %}
+            {
+                title:"{{ agenda.instructores_f.nombre }}",
+                start: "{{ agenda.fecha_Creacion | date:"Y-md-d" }}",
+                end: "{{ agenda.fecha_Vencimiento | date:"Y-md-d" }}",
+             
+                
+            },
+		{% endfor %}
+    ]
+           
+          
+    });
+    calendar.render();
+});
+</script>
+{% endblock extra_js %}
