--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
- 
+ {% block extra_css %}
+ {% endblock extra_css %}
 
     
 </head>
@@ -44,6 +45,9 @@
     {% block content %}
     {% endblock %}
 
+    {% block extra_js %}
+    {% endblock extra_js %}
+   
 </body>
 
 </html>
