--- a/programa/templates/createPrograma.html
+++ b/programa/templates/createPrograma.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
 <main class="container">
     <div class="row">
@@ -17,9 +16,12 @@
                 </button>
             
             </form>
-            <button>
-                <a href="/programa/">Volver</a>
-            </button>
+            <div>
+                <a class="btn btn-danger btn-sm" href="/programa/">Volver</a>
+            </div>
+            <div>
+                <a class="btn btn-secondary btn-sm mt-1" href="/programa/create/">Tipo de Programa</a>
+            </div>
             </form>
         </section>
     </div>
