--- a/programa/templates/programa_f.html
+++ b/programa/templates/programa_f.html
@@ -1,79 +1,30 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block extra_css %}
-
-<link rel="stylesheet" type="text/css" href="{% static 'css/estilos.css' %}">
-
-
-{% endblock extra_css %}
 
 {% block content %}
 
 
-<form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search" method="POST">
-  {% csrf_token %}
-  <div class="input-group">
-    <input type="text" class="form-control bg-light border-0 small " placeholder="Buscar..." name="buscar"
-      value="{{ request.POST.buscar }}">
-    <div class="input-group-append">
-      <button class="btn btn-primary" type="submit">
-        <i class="fas fa-search fa-sm "></i>
-      </button>
+<section class="col-md-3 offset-md-2 mt-3">
+  <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
+  method="POST">
+    {% csrf_token %}
+    <div class="input-group">
+      <input type="text" class="form-control bg-light border-0 small" placeholder="Buscar..." name="buscar" value="{{ request.POST.buscar }}">
+      <div class="input-group-append">
+        <button class="btn btn-dark" type="submit">
+          <i class="bi bi-search"> Buscar</i>
+        </button>
+      </div>
     </div>
-  </div>
-</form>
-
-<section>
+    
+  </form>
   <div>
     <a href="/programa/create/" class="btn btn-secondary btn-sm mt-2 offset-md-2"> Crear Programa de Formacion</a>
   </div>
+  </section>
 
-</section>
-
-<section class="card">
-  {% for programa_Formacion in programa %}
-  <div class="card__perfil">
-    
-      <div class="card__nombre">
-
-          <img src="{% static 'images/sena1.png' %}" alt="">
-          <h4><strong>{{programa_Formacion.nombre_Programa}}</strong></h4>
-          <h6><strong>{{programa_Formacion.tipo_Pograma}}</strong></h6>
-          
-      </div>
-      
-      <hr>
-      <td><a href="{% url 'editarPrograma' programa_Formacion.id %}" class="btn btn-secondary btn-sm mt-1">Editar</a>
-        <a href="{% url 'more_Agenda' programa_Formacion.id %}" class="btn btn-secondary btn-sm mt-1">Ver Horario</a>
-        <a href="{% url 'eliminarPrograma' programa_Formacion.id %}" class="btn btn-danger btn-sm mt-1">Eliminar</a>
-        
-
-      </td>
-      
-  </div>
-  {% endfor %}
-</section>
-
-
-<!-- <div class="row">
-  {% for programa_Formacion in programa %}
-  <div class="col-lg-2">
-    <img class="thumbnail" src="{{product.imagenUrl}}">
-    <div class="box-element product">
-      <h4><strong>{{programa_Formacion.nombre_Programa}}</strong></h4>
-      <h6><strong>{{programa_Formacion.nombre_Programa}}</strong></h6>
-      <hr>
-
-      
-    </div>
-  </div>
-  {% endfor %}
-</div> -->
-
-
-
-<!-- <main class="container">
+<main class="container">
   <div class="row">
     <div class="col-md-5 offset-md-2 mt-4">
       <table class="table table_bordered">
@@ -115,11 +66,14 @@
         
         </tbody>
       </table>
+      <div>
+        {% include 'paginator.html' %}
+      </div>
       
     </div>
   
   </div>
 
-</main> -->
+</main>
 
 {% endblock %}
