--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -2,34 +2,112 @@
 <html lang="en">
 
 <head>
-    
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Aplicacion web</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
-    
-  
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
- {% block extra_css %}
- {% endblock extra_css %}
 
-    
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Aplicacion web</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% load static %}
+  <!--Google Fonts (MontSerrat)-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+  <!-- Links CSS-->
+  <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+  <!-- Bootstrap-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  {% block extra_css %}
+  {% endblock extra_css %}
+
+
 </head>
-<body>
 
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+<body>
+  <div class="container-fluid">
+    <!-- BARRA NAVEGACIÓN -->
+    <div class="bg-light">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark border-3 border-bottom border-primary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">
+            <img src="{% static 'images/Sena3.png' %}" alt="Logo" width="80" height="60"
+              class="d-inline-block align-text-top">
+          </a>
+          {% if user.is_authenticated %}
+          <ul class="navbar-nav ms-3">
+            <li class="nav-item">
+              <a class="nav-link bg-dark" href="/logout"><i class="bi bi-door-closed"></i>Cerrar Sesión</a>
+            </li>
+          </ul>
+          <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+        <div id="MenuNavegacion" class="collapse navbar-collapse">
+          <ul class="navbar-nav ms-3">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                Programas de Formacion
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Programas</a></li>
+                <li><a class="dropdown-item" href="#">Tipos de Programa</a></li>
+
+              </ul>
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-3">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                Centros de Formacion
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Municipios</a></li>
+                <li><a class="dropdown-item" href="#">Ambientes</a></li>
+                <li><a class="dropdown-item" href="#">Sedes</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-3">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                Instructores
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Tipo de Instructor</a></li>
+
+              </ul>
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-3">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Horarios</a>
+            </li>
+            {% else %}
+            <ul class="navbar-nav ms-3">
+              <li class="nav-item">
+                <a class="nav-link text-nowrap" href="/login"><i class="bi bi-box-arrow-in-right"></i>Ingresar</a>
+              </li>
+            </ul>
+        </div> {% endif %}
+      </nav>
+    </div>
+   
+
+
+
+    <!-- <nav class="navbar">
         <div class="container">
             <a class="navbar-brand" href="/">
-              <img src="{% static 'images/Sena2.png' %}" alt="Logo" width="85" height="50" class="d-inline-block align-text-top">
+              <img src="{% static 'images/Sena3.png' %}" alt="Logo" width="80" height="60" class="d-inline-block align-text-top">
               </a>
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         {% if user.is_authenticated %}
                       <li class="nav-item">
-                        <a class="nav-link" href="/logout"><i class="bi bi-door-closed"></i>Cerrar Sesión</a>
+                        <a class="nav-link bg-dark" href="/logout"><i class="bi bi-door-closed"></i>Cerrar Sesión</a>
                       </li>
                       {% else %}
                       <li class="nav-item">
@@ -42,15 +120,17 @@
                     {% endif %}
                   </div>
                 </div>
-              </nav>
+              </nav> -->
 
     {% block content %}
     {% endblock %}
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"></script>
     {% block extra_js %}
     {% endblock extra_js %}
-   
+
 </body>
 
 </html>
-
