--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -1,62 +1,38 @@
 * {
-  font-family: "Poppins", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 
-h1{
-    text-align: center;
-    padding: 10px;
-    color: rgb(97, 96, 96);
+  }
+.container{
+    display: flex;
+    justify-content:center;
+    flex-wrap:wrap;
+    gap: 16px;
 }
-.descripcion{
-    text-align: center;
-    padding: 5px 25px;
-    color: rgb(53, 53, 53);
+  
+.img{
+    height:auto; 
+    width:100%; 
+    position:relative;
+    background-position: center;
+    
 }
 
 .card{
-    width: 100%;
-    display: flex;
-    gap: 50px;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 30px;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    width: auto;
+    border: 1px solid lightgray;
+    box-shadow: 2px 2px 8px 4px #d3d3d3d1;
+    border-radius:15px;
+    font-family: sans-serif;
 }
-.card__perfil{
-    width: 280px;
-    padding: 10px;
-    box-shadow: 1px 1px 5px rgb(201, 201, 201);
-    border: solid rgba(3, 133, 255, 0) 2px;
-    border-radius: 10px;
-    overflow: hidden;
-}
-.card__perfil:hover{
-    border: solid rgb(5, 220, 37) 2px;
-}
-.card__perfil:hover img{
-    transform: rotate(0);
-}
-img{
-    width: 140px;
-    border-radius: 50%;
-    box-shadow: 2px 2px 5px rgb(216, 216, 216);
-    transform: rotate(-30deg);
-    transition: all .3s;
-}
-.card__nombre{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5px;
-}
-hr{
-    width: 100%;
-    height: 4px;
-    background: rgb(223, 221, 221);
-    margin: 20px 5px;
-}
-.card__button{
-    text-align: center;
-}
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+ 
