--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -65,7 +65,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Municipios</a></li>
-                <li><a class="dropdown-item" href="#">Ambientes</a></li>
+                <li><a class="dropdown-item" href="/ambiente">Ambientes</a></li>
                 <li><a class="dropdown-item" href="#">Sedes</a></li>
               </ul>
             </li>
