--- a/home/templates/ambiente/mostrarAmbiente.html
+++ b/home/templates/ambiente/mostrarAmbiente.html
@@ -30,10 +30,9 @@
       <table class="table table_bordered">
         <thead>
           <tr>
-            <td><strong>#</strong> </td>
-            <td><strong>Municipio</strong> </td>
+           
+            <td><strong>Ambientes</strong> </td>
         
-
           </tr>
         </thead>
         <tbody>
@@ -42,10 +41,9 @@
             <td>{{ambiente.nom_ambiente}}</td>
           
 
-            <td><a href="{% url 'editarAmbiente' ambiente.id %}" class="btn btn-secondary btn-sm">Editar</a>
+            <td>
+              <a href="{% url 'editarAmbiente' ambiente.id %}" class="btn btn-secondary btn-sm">Editar</a>
               <a href="{% url 'eliminarAmbiente' ambiente.id %}" class="btn btn-danger btn-sm mt-1">Eliminar</a>
-              
-
             </td>
           </tr>
           {% endfor %}
