--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -14,6 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   <!-- Links CSS-->
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
   <!-- Bootstrap-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -29,18 +30,14 @@
   <div class="container-fluid">
     <!-- BARRA NAVEGACIÓN -->
     <div class="bg-light">
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark border-3 border-bottom border-primary">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark border-3 border-bottom border-secondary">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
             <img src="{% static 'images/Sena3.png' %}" alt="Logo" width="80" height="60"
               class="d-inline-block align-text-top">
           </a>
           {% if user.is_authenticated %}
-          <ul class="navbar-nav ms-3">
-            <li class="nav-item">
-              <a class="nav-link bg-dark" href="/logout"><i class="bi bi-door-closed"></i>Cerrar Sesión</a>
-            </li>
-          </ul>
+    
           <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -64,9 +61,10 @@
                 Centros de Formacion
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Municipios</a></li>
+                <li><a class="dropdown-item" href="/centros">Ver los Centros</a></li>
+                <li><a class="dropdown-item" href="/municipio">Municipios</a></li>
                 <li><a class="dropdown-item" href="/ambiente">Ambientes</a></li>
-                <li><a class="dropdown-item" href="#">Sedes</a></li>
+                <li><a class="dropdown-item" href="/sede">Sedes</a></li>
               </ul>
             </li>
           </ul>
@@ -76,15 +74,17 @@
                 Instructores
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Tipo de Instructor</a></li>
+                <li><a class="dropdown-item" href="/instructores">Ver Instructores</a></li>
+                <li><a class="dropdown-item" href="/tipo">Tipo de Instructor</a></li>
 
               </ul>
             </li>
           </ul>
           <ul class="navbar-nav ms-3">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Horarios</a>
+              <a class="nav-link bg-dark" href="/logout"></i>Cerrar</a>
             </li>
+          </ul>
             {% else %}
             <ul class="navbar-nav ms-3">
               <li class="nav-item">
