--- a/home/templates/ingresar.html
+++ b/home/templates/ingresar.html
@@ -1,19 +1,19 @@
 {%  extends 'base.html' %}
 
 {% block content %}
-<h1> Iniciar Sesion </h1>
+<main class="container py-5">
+    
+    <div class="row">
+        <section class="col-md-4 offset-md-4 mt-5">
+            <h1>Iniciar Sesion</h1>
+            {{error}}
+            <form method="POST">
+                {% csrf_token %}
+                {{form.as_p}}
+                  <button type="submit" class="btn btn-secondary btn-flat m-b-30 m-t-30">Iniciar Sesión</button>
+              </form>
+        </section>
 
-{{error}}
-
-<form method="POST"> 
-
-    {% csrf_token %}
-{{form.as_p}}
-
-<button>
-    Ingresar
-</button>
-
-</form>
-
+    </div>
+</main>
 {%  endblock %}
