--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -16,7 +16,7 @@
             <div class="text-center">
                 {% if user.is_authenticated %}
                 <a class="btn btn-dark" href="/programa/">Ver los programas</a>
-                <a class="btn btn-dark" href="/instructores/">Ver los Instructores</a>
+                <a class="btn btn-dark" href="/signup/">Registrar Usuario</a>
            
                 {% endif %}
                 
