--- a/agenda/templates/asignar/crearAsignar.html
+++ b/agenda/templates/asignar/crearAsignar.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
 <main class="container">
     <div class="row">
         <section class="col-md-4 offset-md-4 mt-5">
             <form method="POST" class="card card-body">
-                <h1> Crear Centro de Formacion</h1>
+                <h1> Asignar Horario</h1>
                 {{error}}
             
                 {% csrf_token %}
@@ -16,9 +17,9 @@
                 </button>
             
             </form>
-            <div>
-                <a class="btn btn-danger btn-sm" href="/centros/">Volver</a>
-            </div>
+            <button>
+                <a href="/asignar/">Volver</a>
+            </button>
             </form>
         </section>
     </div>
