--- a/agenda/templates/createAgenda.html
+++ b/agenda/templates/createAgenda.html
@@ -6,7 +6,7 @@
     <div class="row">
         <section class="col-md-4 offset-md-4 mt-5">
             <form method="POST" class="card card-body">
-                <h1> Crear Agenda</h1>
+                <h1> Crear Horario</h1>
                 {{error}}
             
                 {% csrf_token %}
@@ -18,7 +18,7 @@
             
             </form>
             <button>
-                <a href="/agenda/">Volver</a>
+                <a href="/horario/">Volver</a>
             </button>
             </form>
         </section>
