--- a/home/templates/signup.html
+++ b/home/templates/signup.html
@@ -3,18 +3,29 @@
 
 
 {% block content %}
-<h1> Registrarse</h1>
 
-{{error}}
+<main class="container">
+    <div class="row">
+        <div class="col-md-4 offset-md-4 mt-5">
+            <form method="POST" class="card card-body">
+                <h1 class="text-center"> Registro</h1>
+                {{error}}
+                {% csrf_token %}
+                {{form.as_p}}
 
-<form action="/signup/" method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
+                <button class="btn btn-secondary btn-flat m-b-30 m-t-30" type="submit">
+                    Registrar
+                </button>
+                </div>
+                
 
-    <button>
-        Registrar
-    </button>
+                
+            </form>
 
-</form>
+        </div>
+
+    </div>
+
+</main>
 
 {%  endblock %}
