--- a/programa/templates/programa/programa_f.html
+++ b/programa/templates/programa/programa_f.html
@@ -22,6 +22,9 @@
   <div>
     <a href="/programa/create/" class="btn btn-secondary btn-sm mt-2 offset-md-2"> Crear Programa de Formacion</a>
   </div>
+  <div>
+    <a href="/tipoprograma/" class="btn btn-secondary btn-sm mt-2 offset-md-2"> Tipo de programa</a>
+  </div>
   </section>
 
 <main class="container">
