--- a/programa/templates/tipoPrograma/createTipoPrograma.html
+++ b/programa/templates/tipoPrograma/createTipoPrograma.html
@@ -5,7 +5,7 @@
     <div class="row">
         <section class="col-md-4 offset-md-4 mt-5">
             <form method="POST" class="card card-body">
-                <h1> Crear Centro de Formacion</h1>
+                <h1> Crear Tipo de Programa</h1>
                 {{error}}
             
                 {% csrf_token %}
@@ -17,7 +17,7 @@
             
             </form>
             <div>
-                <a class="btn btn-danger btn-sm" href="/centros/">Volver</a>
+                <a class="btn btn-danger btn-sm" href="/tipoprograma/">Volver</a>
             </div>
             </form>
         </section>
